--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <div class="subheading mb-3">EDF Energy UK R&D</div>
                                 <p> Main tasks include: </p>
                                 <ul> 
-                                    <li> Engaging with various units across the business to gather data and project requirements, bid prepartion and submission (BEIS, IUK)</li>
+                                    <li> Engaging with various units across the business to gather data and project requirements, bid preparation and submission (BEIS, IUK)</li>
                                     <li> Responsible for developing optimisation Python tools to optimally value energy storage assets co-located with renewable generation, when participating in various electricity markets -- examples include day-ahead and intraday markets, frequency response markets, balancing mechanism and high non-energy cost avoidance </li>
                                     <li> Workflow automation, integration and data management of existing forecasting tools (data scrapping, database record manipulation, shell/batch scripting, deployment in AWS, testing in operational conditions)</li>
                                     <li> Data collection and analysis of electricity price profiles, used to better inform arbitrage strategies for energy storage assets</li>
