--- a/index.html
+++ b/index.html
@@ -203,7 +203,72 @@
             <section class="resume-section" id="volunteering">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Volunteering</h2>
-                    <p>Vice-chair of WiP, Event coordinator of Cigre UK NGN, Project Manager of Cigre WiE, Data science instructor and mentor in Sister Analyst</p>
+                    <p>Current roles</p>               
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Vice Chair of Women in Power Committee (UK & Ireland Chapter)</h3>
+                            <div class="subheading mb-3">IEEE Power and Energy Society</div>
+                                <p> Main tasks include: </p>
+                                <ul>
+                                    <li> The main mission of Women In Power (WiP) is to advance the world through the creativity and innovation of diverse leadership, and to foster the careers, connections and talent of women in the power industry to achieve their full potential and become leaders of the future and find their most appropriate route</li>
+                                    <li> Our role is to promote female power engineers in academia and industry, liaising between those who have established themselves in their respective area and are now serving as role models or mentors, and early or mid-career engineers who seek guidance and advice on their way to becoming leaders themselves</li>
+                                    <li> WiP in the UK and Ireland is organising workshops, webinars and similar events to facilitate knowledge exchange, networking and collaboration within and between academia and industry</li>
+                                </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2020 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Event Coordinator</h3>
+                            <div class="subheading mb-3">Cigre UK Next Generation Network</div>
+                                <p> Main tasks include: </p>
+                                <ul> 
+                                    <li> Part of the event team, helping coordinating multiple activities. Examples include: diversity and inclusion events, technical webinars and joint events with other Cigre branches</li>
+                                    <li> Main responsibilities lie in communicating with the other Cigre teams for smooth deployment of our events, poster and newsletter preparation, as well as communicating key information to the main participants of our events </li>
+                                    <li> Lead the deployment of an innovation event helping with identifying and boosting SMEs' presence in the UK </li>
+                                    <li> Provide training and guidance at new members in the team </li>
+                                    <li> Sit at inclusion and diversity panels organised jointly with other international Cigre sections </li>
+                                </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2020 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Project Manager</h3>
+                            <div class="subheading mb-3">Cigre Women in Engineering Network</div>
+                                <p> Main tasks include: </p>
+                                <ul> 
+                                    <li> Engaging with various Cigre and industry units to gather knowledge and project requirements for our events</li>
+                                </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2021 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Data science instructor and mentor</h3>
+                            <div class="subheading mb-3">Syster analyst</div>
+                                <p> Main tasks include: </p>
+                                <ul>
+                                    <li>Providing workshops, training and mentoring to women in order to empower their data and professional skills.</li>
+                                </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2020 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Reviewer</h3>
+                            <div class="subheading mb-3">Applied Energy</div>                                
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2018 - Present</span></div>
+                    </div>
+                    <p> Previous roles </p>
+                    <ul>
+                        <li> Membership development officer and student branch coordinator at the national committee of IEEE UK&I PES (Sep. 2019 - Dec. 2020)                        
+                        <li> Website and social media coordinator at IEEE UK&I PES Student Branch Chapter (Feb. 2018 - Feb. 2019) </li>
+                        <li> Industry Liaison at IEEE UK&I PES Student Branch Chapter (Jan. 2017 - Jan. 2018) </li>
+                        <li> STEM Ambassador in science school festivals (Sep. 2016 - Feb. 2019) </li>
+                        <li> Helping with organisation of RLadies Manchester coding and data meetups (Sep. 2016 - Feb. 2019) </li>
+                    </ul>                  
                 </div>
             </section>
             <!-- Presentations-->
