--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <section class="resume-section" id="volunteering">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Volunteering</h2>
-                    <p>Current roles</p>               
+                    <h3 class="mb-0">Current roles</h3>               
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Vice Chair of Women in Power Committee (UK & Ireland Chapter)</h3>
@@ -249,7 +249,7 @@
                             <div class="subheading mb-3">Syster analyst</div>
                                 <p> Main tasks include: </p>
                                 <ul>
-                                    <li>Providing workshops, training and mentoring to women in order to empower their data and professional skills.</li>
+                                    <li>Providing workshops, training and mentoring to women in order to empower their data and professional skills</li>
                                 </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2020 - Present</span></div>
@@ -261,7 +261,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2018 - Present</span></div>
                     </div>
-                    <p> Previous roles </p>
+                    <h3 class="mb-0"> Previous roles </h3>
                     <ul>
                         <li> Membership development officer and student branch coordinator at the national committee of IEEE UK&I PES (Sep. 2019 - Dec. 2020)                        
                         <li> Website and social media coordinator at IEEE UK&I PES Student Branch Chapter (Feb. 2018 - Feb. 2019) </li>
