--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Testing: AWS deployment 
+                            Agile Development & Testing: Linux, AWS deployment 
                         </li>
                     </ul>
                     <br>
@@ -202,12 +202,11 @@
             <!-- Volunteering-->
             <section class="resume-section" id="volunteering">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Volunteering</h2>
-                    <h3 class="mb-0">Current roles</h3>               
+                    <h2 class="mb-5">Volunteering</h2>                        
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Vice Chair of Women in Power Committee (UK & Ireland Chapter)</h3>
-                            <div class="subheading mb-3">IEEE Power and Energy Society</div>
+                            <div class="subheading mb-3"><a href="https://www.ieee-ukandireland.org/ieee-uk-and-ireland-section-pes-chapter-forms-women-in-power-committee/"> IEEE Power and Energy Society </a></div>
                                 <p> Main tasks include: </p>
                                 <ul>
                                     <li> The main mission of Women In Power (WiP) is to advance the world through the creativity and innovation of diverse leadership, and to foster the careers, connections and talent of women in the power industry to achieve their full potential and become leaders of the future and find their most appropriate route</li>
@@ -220,7 +219,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Event Coordinator</h3>
-                            <div class="subheading mb-3">Cigre UK Next Generation Network</div>
+                            <div class="subheading mb-3"><a href="https://cigre.org.uk/ngn/" > Cigre UK Next Generation Network </a> </div>
                                 <p> Main tasks include: </p>
                                 <ul> 
                                     <li> Part of the event team, helping coordinating multiple activities. Examples include: diversity and inclusion events, technical webinars and joint events with other Cigre branches</li>
@@ -235,7 +234,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Project Manager</h3>
-                            <div class="subheading mb-3">Cigre Women in Engineering Network</div>
+                            <div class="subheading mb-3"><a href="https://cigre.org.uk/womens-network/"> Cigre Women in Engineering Network</a></div>
                                 <p> Main tasks include: </p>
                                 <ul> 
                                     <li> Engaging with various Cigre and industry units to gather knowledge and project requirements for our events</li>
@@ -246,7 +245,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Data science instructor and mentor</h3>
-                            <div class="subheading mb-3">Syster analyst</div>
+                            <div class="subheading mb-3"><a href="https://sisteranalyst.org/"> Sister Analyst </a></div>
                                 <p> Main tasks include: </p>
                                 <ul>
                                     <li>Providing workshops, training and mentoring to women in order to empower their data and professional skills</li>
