--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/angeliki-l/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/AngelikiLk"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/angelikilk?lang=en"><i class="fab fa-twitter"></i></a>                                            
-                    </div>                 
+                    </div>
+                    <br><br>
+                    <p>More information about me <a href="https://vimeo.com/596024866"> here </a>. </p>
                 </div>
             </section>
             <hr class="m-0" />
