--- a/index.html
+++ b/index.html
@@ -348,44 +348,10 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>I am a yoga addict and I like walking and running in sea and residential areas, as well as visiting bookshops and data meetups!</p>
                     <p class="mb-0">When forced indoors, I study French, I knit and spend my free time exploring the latest advancements in energy storage, open source development and data science.</p>                    
-                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                      <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                      </div>
-                      <div class="carousel-inner">
-                        <div class="carousel-item active">
-                          <img src="assets/img/interests.JPG" class="d-block w-100" alt="...">
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
-                          </div>
-                        </div>
-                        <div class="carousel-item">
-                          <img src="assets/img/running.jpg" class="d-block w-100" alt="...">
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
-                          </div>
-                        </div>
-                        <div class="carousel-item">
-                          <img src="assets/img/running_award.jpg" class="d-block w-100" alt="...">
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
-                          </div>
-                        </div>
-                      </div>
-                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                      </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                      </button>
-                    </div>
+                    <a class="navbar-brand js-scroll-trigger" href="#page-bottom">
+                        <span class="d-block d-lg-none">Interests</span>
+                        <span class="d-none d-lg-block"><img src="assets/img/interests.JPG" alt="interests" /></span>
+                    </a>
                 </div>
             </section>
             <hr class="m-0" />
