--- a/index.html
+++ b/index.html
@@ -326,7 +326,11 @@
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">                        
+                    <ul class="fa-ul mb-0"> 
+                        <li>
+                           <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <b> The UoM Volunteer of the Year Award 2019:</b> Nominated by the IEEE PES UK and Ireland SBC Committee and shortlisted for the 'Volunteer of the Year' award of the university of Manchester. 
+                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             <b>Best oral presentation:</b> Awarded for presentation of the paper "Optimal joint strategy of wind battery storage unit for smoothing and trading of wind power" during the 3rd Annual Conference in Energy Storage and Its Applications, 3rd CDT-ESA-AC, 11–12 September 2018, Sheffield, UK.
@@ -347,7 +351,8 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>I am a yoga addict and I like walking and running in sea and residential areas, as well as visiting bookshops and data meetups!</p>
-                    <p class="mb-0">When forced indoors, I study French, I knit and spend my free time exploring the latest advancements in energy storage, open source development and data science.</p>                    
+                    <p>My previous fundraising page regarding a 40-mile running challenge can be found <a href="https://fundraise.cancerresearchuk.org/page/angelikis-giving-page-2">here</a>.
+                    <p class="mb-0">In addition, when forced indoors, I study French, I knit and spend my free time exploring the latest advancements in energy storage, open source development and data science.</p>                    
                     <a class="navbar-brand js-scroll-trigger" href="#page-bottom">
                         <span class="d-block d-lg-none">Interests</span>
                         <span class="d-none d-lg-block"><img src="assets/img/interests.JPG" alt="interests" /></span>
