--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
                     </ol>
                     <p>Inclusion, diversity and volunteering events</p>
                     <ol>
+                        <li> EDF interview with Energy Systems Catapult about the effective ways of iteraction between industry and academia, September 2021.
                         <li> Benefits of joining a professional institution, Cigre UK NGN for COP26-Youth Engineering Climate Change Conference, September 2021. Please find the podcast <a href="https://vimeo.com/596029901"> here</a>. </li>
                         <li> Benefits of joining IEEE PES, International PES Day, IEEE UK&I PES SBS, April 2020 </li>
                         <li> <a href="http://www.ieee-manchester.org.uk/previous-events/wine-2019/"> Help me help you!</a>, IEEE UK&I PES SBC, October 2019 (Starting at 01h:27min) </li>
