--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>I am a yoga addict and I like walking and running in sea and residential areas, as well as visiting bookshops and data meetups!</p>
-                    <p>My previous fundraising page regarding a 40-mile running challenge can be found <a href="https://fundraise.cancerresearchuk.org/page/angelikis-giving-page-2">here</a>.
+                    <p>My previous fundraising page regarding a 40-mile running challenge can be found <a href="https://fundraise.cancerresearchuk.org/page/angelikis-giving-page-2">here</a>. I am also a monthly donator at Prostate Cancer UK, and I donate knitted scarfs to British Heart Foundation. </p>
                     <p class="mb-0">In addition, when forced indoors, I study French, I knit and spend my free time exploring the latest advancements in energy storage, open source development and data science.</p>                    
                     <a class="navbar-brand js-scroll-trigger" href="#page-bottom">
                         <span class="d-block d-lg-none">Interests</span>
