--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <p>Data conferences and meetups
                     <ol>
                         <li> <a href="https://www.linkedin.com/feed/update/urn:li:activity:6736327941032083456/"> Data analytics and workflow automation in Smart Energy Systems</a>, European Data Science Conference, November 2020 - Video <a href="https://m.youtube.com/watch?v=YtMKq6RZIDA&feature=youtu.be"> here.</a></li>
-                        <li> Extracting and visualising NASA’s MERRA-2 data, PyDataMCR, April 2020 - Video <a href="https://www.youtube.com/watch?v=7B84DlB5Nsc&t=460s"> here (Starting at 00h:15min). </li>
+                        <li> Extracting and visualising NASA’s MERRA-2 data, PyDataMCR, April 2020 - Video <a href="https://www.youtube.com/watch?v=7B84DlB5Nsc&t=460s"> here </a>(Starting at 00h:15min). </li>
                     </ol>
                 </div>
             </section>
