--- a/index.html
+++ b/index.html
@@ -285,7 +285,8 @@
                     </ol>
                     <p>Inclusion, diversity and volunteering events</p>
                     <ol>
-                        <li> EDF interview with Energy Systems Catapult about the effective ways of iteraction between industry and academia, September 2021.
+                        <li> CIGRE UK NGN Women in Energy Roundtable discussion, October 2021. Please find the recording <a href="https://register.gotowebinar.com/recording/280855270776496651"> here</a>. </li>
+                        <li> EDF interview with Energy Systems Catapult about the effective ways of iteraction between industry and academia, September 2021. </li>
                         <li> Benefits of joining a professional institution, Cigre UK NGN for COP26-Youth Engineering Climate Change Conference, September 2021. Please find the podcast <a href="https://vimeo.com/596029901"> here</a>. </li>
                         <li> <a href="https://www.youtube.com/watch?v=vKJOBQjd5_s"> Benefits of joining IEEE PES, International PES Day </a>, IEEE UK&I PES SBS, April 2020 (Starting at 00h:12min) </li>
                         <li> <a href="http://www.ieee-manchester.org.uk/previous-events/wine-2019/"> Help me help you!</a>, IEEE UK&I PES SBC, October 2019 (Starting at 01h:27min) </li>
