--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="subheading mb-5">
                         <a href="mailto:angeliki.loukatou@edfenergy.com">angeliki.loukatou@edfenergy.com</a>
                     </div>
-                    <p class="lead mb-5">Most of the people I know call me Kelly. I currently work as a Research Engineer at the R&D Centre of EDF Energy UK. Before that, I was a modelling analyst at Energy Systems Catapult, working as part of their system integration and innovation team and exploring energy storage and second-life batteries. I have a passion for energy storage and hence, I pursued a PhD in battery storage in the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). In addition, I am currently working towards chartered engineering and I also obtained my first professional qualification as Certified Associate in Project Management (CAPM) with the Project Management Institute (PMI) in December 2017.</p>
+                    <p class="lead mb-5">Most of the people I know call me Kelly. I currently work as a Senior Research Engineer at the R&D Centre of EDF Energy UK. Before that, I was a modelling analyst at Energy Systems Catapult, working as part of their system integration and innovation team and exploring energy storage and second-life batteries. I have a passion for energy storage and hence, I pursued a PhD in battery storage in the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). In addition, I am currently working towards chartered engineering and I also obtained my first professional qualification as Certified Associate in Project Management (CAPM) with the Project Management Institute (PMI) in December 2017.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/angeliki-l/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/AngelikiLk"><i class="fab fa-github"></i></a>
@@ -68,6 +68,15 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research Engineer</h3>
                             <div class="subheading mb-3">EDF Energy UK R&D</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2021 - Present</span></div>
+                </div>
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Research Engineer</h3>
+                            <div class="subheading mb-3">EDF Energy UK R&D</div>
                                 <p> Main tasks include: </p>
                                 <ul> 
                                     <li> Engaging with various units across the business to gather data and project requirements, bid preparation and submission (BEIS, IUK)</li>
@@ -76,7 +85,7 @@
                                     <li> Data collection and analysis of electricity price profiles, used to better inform arbitrage strategies for energy storage assets</li>
                                 </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2020 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2020 - October 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
