--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Research Engineer</h3>
+                            <h3 class="mb-0">Senior Research Engineer</h3>
                             <div class="subheading mb-3">EDF Energy UK R&D</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2021 - Present</span></div>
@@ -184,7 +184,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Python: Data insertion, manipulation, web scraping, forecasting
+                            Python: Data insertion, manipulation, visualisation, web scraping, forecasting
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -229,7 +229,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Event Coordinator</h3>
+                            <h3 class="mb-0">Event Coordinator / Lead</h3>
                             <div class="subheading mb-3"><a href="https://cigre.org.uk/ngn/" > Cigre UK Next Generation Network </a> </div>
                                 <p> Main tasks include: </p>
                                 <ul> 
