--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Research Engineer</h3>
                             <div class="subheading mb-3">EDF Energy UK R&D</div>
-                        <p> Main tasks include: </p>
+                                <p> Main tasks include: </p>
                                 <ul> 
                                     <li>Manage BEIS-funded projects regarding long-duration energy storage (LDES). The projects include lithium-based batteries co-located with vanadium flow batteries and renewables, adiabatic compressed-air energy storage utilising EDF's gas storage facilities and hydrogen stored in depleted uranium hydride, combined with fuel cells. </li>
                                     <li>Be technical lead at all work packages regarding business models and revenue estimation for the above projects</li>
@@ -77,7 +77,8 @@
                                     <li>Electricity price forecasting in the long-term for different Future Energy Scenarios.</li>
                                     <li>Maintain and update EDF Women's Network social media and website (EDF Women's Network Digital Lead)</li>
                                 </ul>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2021 - Present</span></div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2021 - Present</span></div>   
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
