--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                             <div class="subheading mb-3">EDF Energy UK R&D</div>
                                 <p> Main tasks include: </p>
                                 <ul> 
-                                    <li>Manage BEIS-funded projects regarding long-duration energy storage (LDES). The projects include lithium-based batteries co-located with vanadium flow batteries and renewables, adiabatic compressed-air energy storage utilising EDF's gas storage facilities and hydrogen stored in depleted uranium hydride, combined with fuel cells. </li>
+                                    <li>Manage BEIS-funded projects regarding long-duration energy storage (LDES). The projects include lithium-based batteries co-located with vanadium flow batteries and renewables, adiabatic compressed-air energy storage utilising EDF's gas storage facilities and hydrogen stored in depleted uranium hydride, combined with fuel cells </li>
                                     <li>Be technical lead at all work packages regarding business models and revenue estimation for the above projects</li>
                                     <li>Mentor and coach new and existing team members</li>
                                     <li>Develop and maintain optimisation Python tools for hydrogen storage and battery storage valuations</li>
-                                    <li>Electricity price forecasting in the long-term for different Future Energy Scenarios.</li>
+                                    <li>Electricity price forecasting in the long-term for different Future Energy Scenarios</li>
                                     <li>Maintain and update EDF Women's Network social media and website (EDF Women's Network Digital Lead)</li>
                                 </ul>
                         </div>
@@ -231,10 +231,11 @@
                                     <li> Our role is to promote female power engineers in academia and industry, liaising between those who have established themselves in their respective area and are now serving as role models or mentors, and early or mid-career engineers who seek guidance and advice on their way to becoming leaders themselves</li>
                                     <li> WiP in the UK and Ireland is organising workshops, webinars and similar events to facilitate knowledge exchange, networking and collaboration within and between academia and industry</li>
                                     <li> Events being organised: <li>
-                                    <ol>
-                                        <li> Collaboration with Chile, Innovation in the area of transport and energy storage, 30-03-22</li>
-                                    </ol>
                                 </ul>
+                                <ol>
+                                    <li> Collaboration with Chile, Innovation in the area of transport and energy storage, 30-03-22</li>
+                                </ol>
+                                
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">February 2022 - Present</span></div>
                     </div>
@@ -250,13 +251,13 @@
                                     <li> Provide training and guidance at new members in the team </li>
                                     <li> Sit at inclusion and diversity panels organised jointly with other international Cigre sections </li>
                                     <li> Events being organised: <li>
-                                    <ol>
-                                        <li> Collaboration with Australia, Cutting Edge Technologies Towards a Net-Zero World (Modern Energy Management Systems, EV Roadmaps), 27-01-22</li>
-                                        <li> Collaboration with France, Offshore Wind, 03-02-33</li>
-                                        <li> Innovation Showcase in the UK, 26/27-04-22 </li>
-                                        <li> Collaboration with Romania, Green Technologies in T/s and D/S, 03-05-22</li>
-                                    </ol>
                                 </ul>
+                                <ol>
+                                    <li> Collaboration with Australia, Cutting Edge Technologies Towards a Net-Zero World (Modern Energy Management Systems, EV Roadmaps), 27-01-22</li>
+                                    <li> Collaboration with France, Offshore Wind, 03-02-33</li>
+                                    <li> Innovation Showcase in the UK, 26/27-04-22 </li>
+                                    <li> Collaboration with Romania, Green Technologies in T/s and D/S, 03-05-22</li>
+                                </ol>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2022 - Present</span></div>
                     </div>
