--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
                                     <li> The main mission of Women In Power (WiP) is to advance the world through the creativity and innovation of diverse leadership, and to foster the careers, connections and talent of women in the power industry to achieve their full potential and become leaders of the future and find their most appropriate route</li>
                                     <li> Our role is to promote female power engineers in academia and industry, liaising between those who have established themselves in their respective area and are now serving as role models or mentors, and early or mid-career engineers who seek guidance and advice on their way to becoming leaders themselves</li>
                                     <li> WiP in the UK and Ireland is organising workshops, webinars and similar events to facilitate knowledge exchange, networking and collaboration within and between academia and industry</li>
-                                    <li> Events being organised: <li>
                                 </ul>
+                                <p>Events being organised:</p>
                                 <ol>
                                     <li> Collaboration with Chile, Innovation in the area of transport and energy storage, 30-03-22</li>
                                 </ol>
@@ -250,8 +250,8 @@
                                     <li> Lead the deployment of an innovation event helping with identifying and boosting SMEs' presence in the UK </li>
                                     <li> Provide training and guidance at new members in the team </li>
                                     <li> Sit at inclusion and diversity panels organised jointly with other international Cigre sections </li>
-                                    <li> Events being organised: <li>
                                 </ul>
+                                <p>Events being organised:</p>
                                 <ol>
                                     <li> Collaboration with Australia, Cutting Edge Technologies Towards a Net-Zero World (Modern Energy Management Systems, EV Roadmaps), 27-01-22</li>
                                     <li> Collaboration with France, Offshore Wind, 03-02-33</li>
