--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                             <div class="subheading mb-3"><a href="https://cigre.org.uk/ngn/" > Cigre UK Next Generation Network </a> </div>
                                 <p> Main tasks include: </p>
                                 <ul> 
-                                    <li> Part of the event team, helping coordinating multiple activities. Examples include: diversity and inclusion events, technical webinars and joint events with other Cigre branches</li>
+                                    <li> Lead the event team, helping coordinate multiple activities. Examples include: diversity and inclusion events, technical webinars and joint events with other Cigre branches</li>
                                     <li> Main responsibilities lie in communicating with the other Cigre teams for smooth deployment of our events, poster and newsletter preparation, as well as communicating key information to the main participants of our events </li>
                                     <li> Lead the deployment of an innovation event helping with identifying and boosting SMEs' presence in the UK </li>
                                     <li> Provide training and guidance at new members in the team </li>
