--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
                                 <p> Main tasks include: </p>
                                 <ul> 
                                     <li>Manage BEIS-funded projects regarding long-duration energy storage (LDES). The projects include lithium-based batteries co-located with vanadium flow batteries and renewables, adiabatic compressed-air energy storage utilising EDF's gas storage facilities and hydrogen stored in depleted uranium hydride, combined with fuel cells </li>
-                                    <li>Be technical lead at all work packages regarding business models and revenue estimation for the above projects</li>
+                                    <li>Technical lead at all work packages regarding business models and revenue estimation for the above projects</li>
                                     <li>Mentor and coach new and existing team members</li>
                                     <li>Develop and maintain optimisation Python tools for hydrogen storage and battery storage valuations</li>
                                     <li>Electricity price forecasting in the long-term for different Future Energy Scenarios</li>
-                                    <li>Maintain and update EDF Women's Network social media and website (EDF Women's Network Digital Lead)</li>
+                                    <li>EDF Women's Network Digital Lead: Maintain and update EDF Women's Network social media and website</li>
                                 </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2021 - Present</span></div>   
@@ -230,6 +230,7 @@
                                     <li> The main mission of Women In Power (WiP) is to advance the world through the creativity and innovation of diverse leadership, and to foster the careers, connections and talent of women in the power industry to achieve their full potential and become leaders of the future and find their most appropriate route</li>
                                     <li> Our role is to promote female power engineers in academia and industry, liaising between those who have established themselves in their respective area and are now serving as role models or mentors, and early or mid-career engineers who seek guidance and advice on their way to becoming leaders themselves</li>
                                     <li> WiP in the UK and Ireland is organising workshops, webinars and similar events to facilitate knowledge exchange, networking and collaboration within and between academia and industry</li>
+                                    <li> Interact with the IEEE Power&Energy Long-Range UK Planning Committee - Business Developments, Global Policy Engagement, and Next Generation of Leadership </li>
                                 </ul>
                                 <p>Events being organised:</p>
                                 <ol>
@@ -259,7 +260,7 @@
                                     <li> Collaboration with Romania, Green Technologies in T/s and D/S, 03-05-22</li>
                                 </ol>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">November 2022 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2021 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
