--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
                                 <ul> 
                                     <li>Manage BEIS-funded projects regarding long-duration energy storage (LDES). The projects include lithium-based batteries co-located with vanadium flow batteries and renewables, adiabatic compressed-air energy storage utilising EDF's gas storage facilities and hydrogen stored in depleted uranium hydride, combined with fuel cells </li>
                                     <li>Technical lead at all work packages regarding business models and revenue estimation for the above projects</li>
-                                    <li>Mentor and coach new and existing team members</li>
                                     <li>Develop and maintain optimisation Python tools for hydrogen storage and battery storage valuations</li>
                                     <li>Electricity price forecasting in the long-term for different Future Energy Scenarios</li>
                                     <li>EDF Women's Network Digital Lead: Maintain and update EDF Women's Network social media and website</li>
+                                    <li>Mentor and coach new and existing team members</li>
+                                    <li>Working towards Chartered Engineering status </li>
+                                    <li>
                                 </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2021 - Present</span></div>   
