--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                     <li>Technical lead at all work packages regarding business models and revenue estimation for the above projects</li>
                                     <li>Develop and maintain optimisation Python tools for hydrogen storage and battery storage valuations</li>
                                     <li>Electricity price forecasting in the long-term for different Future Energy Scenarios</li>
-                                    <li>EDF Women's Network Digital Lead: Maintain and update EDF Women's Network social media and website</li>
+                                    <li>EDF Women's Network Digital Lead: Maintain and update EDF Women's Network social media and website to promote inclusion and diversity matters</li>
                                     <li>Mentor and coach new and existing team members</li>
                                     <li>Working towards Chartered Engineering status </li>
                                 </ul>
