--- a/index.html
+++ b/index.html
@@ -341,10 +341,10 @@
                     <h2 class="mb-5">Publications</h2>
                     <ol> 
                          <li>
-                             Storage and Flexibility Net Zero Series: Second-life batteries, <a href="https://www.linkedin.com/in/angeliki-l/detail/overlay-view/urn:li:fsd_profileTreasuryMedia:(ACoAACjIkTMB1KPQUvtoK_iVhU7Euib-8WXcDhE,1635467107744)/">Energy Systems Catapult</a>, June 2020.
+                             Storage and Flexibility Net Zero Series: Second-life batteries, <a href="https://es.catapult.org.uk/report/storage-and-flexibility-net-zero-series-second-life-batteries/">Energy Systems Catapult</a>, June 2020.
                          </li>
                          <li>
-                             Storage and Flexibility Net Zero Series: Non-Battery Electrical Storage, <a href="https://www.linkedin.com/in/angeliki-l/detail/overlay-view/urn:li:fsd_profileTreasuryMedia:(ACoAACjIkTMB1KPQUvtoK_iVhU7Euib-8WXcDhE,1635467110459)/">Energy Systems Catapult</a>, May 2020.
+                             Storage and Flexibility Net Zero Series: Non-Battery Electrical Storage, <a href="https://es.catapult.org.uk/report/storage-and-flexibility-net-zero-series-non-battery-electricity-storage/">Energy Systems Catapult</a>, May 2020.
                          </li>
                          <li>
                             Business cases for Wind Battery Storage, <a href="https://www.research.manchester.ac.uk/portal/files/188966471/FULL_TEXT.PDF">PhD Thesis</a>, June 2019.
