--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="subheading mb-5">
                         <a href="mailto:angeliki.loukatou@edfenergy.com">angeliki.loukatou@edfenergy.com</a>
                     </div>
-                    <p class="lead mb-5">Most of the people I know call me Kelly. I currently work as a Senior Research Engineer at the R&D Centre of EDF Energy UK and I am the Digital Lead of EDF Women's Network. Before that, I was a modelling analyst at Energy Systems Catapult, working as part of their system integration and innovation team and exploring energy storage and second-life batteries. I have a passion for energy storage and hence, I pursued a PhD in battery storage in the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). In addition, I am currently working towards chartered engineering and I also obtained my first professional qualification as Certified Associate in Project Management (CAPM) with the Project Management Institute (PMI) in December 2017.</p>
+                    <p class="lead mb-5">Most of the people I know call me Kelly. I currently work as a Lead Research Engineer at the R&D Centre of EDF Energy UK and I am the Digital Lead of EDF Women's Network. Before that, I was a modelling analyst at Energy Systems Catapult, working as part of their system integration and innovation team and exploring energy storage and second-life batteries. I have a passion for energy storage and hence, I pursued a PhD in battery storage in the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). In addition, I am currently working towards chartered engineering and I also obtained my first professional qualification as Certified Associate in Project Management (CAPM) with the Project Management Institute (PMI) in December 2017.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/angeliki-l/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/AngelikiLk"><i class="fab fa-github"></i></a>
@@ -66,7 +66,7 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Research Engineer</h3>
+                            <h3 class="mb-0">Lead Research Engineer</h3>
                             <div class="subheading mb-3">EDF Energy UK R&D</div>
                                 <p> Main tasks include: </p>
                                 <ul> 
@@ -75,7 +75,7 @@
                                     <li>Develop and maintain optimisation Python tools for hydrogen storage and battery storage valuations</li>
                                     <li>Electricity price forecasting in the long-term for different Future Energy Scenarios</li>
                                     <li>EDF Women's Network Digital Lead: Maintain and update EDF Women's Network social media and website to promote inclusion and diversity matters</li>
-                                    <li>Mentor and coach new and existing team members</li>
+                                    <li>Mentor, supervise and coach new and existing team members</li>
                                     <li>Working towards Chartered Engineering status </li>
                                 </ul>
                         </div>
@@ -366,6 +366,10 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
                     <ul class="fa-ul mb-0"> 
+                        <li>
+                           <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                           <b> Paper selected for Paris Cigre session 2022:</b> Business models for the green hydrogen case. 
+                        </li>
                         <li>
                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                            <b> The UoM Volunteer of the Year Award 2019:</b> Nominated by the IEEE PES UK and Ireland SBC Committee and shortlisted for the 'Volunteer of the Year' award of the university of Manchester. 
