--- a/index.html
+++ b/index.html
@@ -341,6 +341,12 @@
                     <h2 class="mb-5">Publications</h2>
                     <ol> 
                          <li>
+                             Business cases for green hydrogen, Paris Cigre Showcase 2022 10-page Publications, August 2022.
+                         </li>
+                         <li>
+                             Statistical modelling of electricity prices and impact on battery storage revenues, IEEE paper at PMAPS conference, June 2022.
+                         </li>
+                         <li>
                              Storage and Flexibility Net Zero Series: Second-life batteries, <a href="https://es.catapult.org.uk/report/storage-and-flexibility-net-zero-series-second-life-batteries/">Energy Systems Catapult</a>, June 2020.
                          </li>
                          <li>
