--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
                                     <li> Collaboration with Australia, Cutting Edge Technologies Towards a Net-Zero World (Modern Energy Management Systems, EV Roadmaps), 27-01-22</li>
                                     <li> Collaboration with France, Offshore Wind, 03-02-33</li>
                                     <li> Innovation Showcase in the UK, 26/27-04-22 </li>
-                                    <li> Collaboration with Romania, Green Technologies in T/s and D/S, 03-05-22</li>
-                                    <li> Collaboration with Australia on Energy Markets, 10-07-22</li>
+                                    <li> Collaboration with Romania, Green Technologies in T/S and D/S, 03-05-22</li>
+                                    <li> Collaboration with Australia, Energy Markets, 10-07-22</li>
                                 </ol>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2021 - Present</span></div>
@@ -349,7 +349,7 @@
                              Business cases for green hydrogen, Paris Cigre Showcase 2022, August 2022.
                          </li>
                          <li>
-                             Statistical modelling of electricity prices and impact on battery storage revenues, <a href="https://ieeexplore.ieee.org/abstract/document/9810626"> IEEE paper </a> at PMAPS conference, June 2022.
+                             Statistical modelling of electricity prices and impact on battery storage revenues, <a href="https://ieeexplore.ieee.org/abstract/document/9810626"> IEEE paper</a> at PMAPS conference, June 2022.
                          </li>
                          <li>
                              Storage and Flexibility Net Zero Series: Second-life batteries, <a href="https://es.catapult.org.uk/report/storage-and-flexibility-net-zero-series-second-life-batteries/">Energy Systems Catapult</a>, June 2020.
